# rust-kanban

./: .gitignore  Cargo.toml  README.md  cargo.toml  estrutura  gerenciador_kanban  kanbam-front  kanbam-mvp  kanban-backend  main.rs  run-MVP
.github/workflows/: ci.yml
my_db/: db  snap.0000000000008832  snap.000000000001BF59
src/: app.rs  main.rs  model.rs  ui.rs
