[package]
name = "kanban-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
[profile.dev]
opt-level = 0
debug = 0
lto= "thin"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
